<resources>
    <string name="app_name">Mgr</string>

    <string name="watering_period_input">Should be watered every…</string>

    <string name="plant_name_input_hint">Plant Name</string>

    <string name="plant_image_input">Add a picture of your plant!</string>

    <string name="click_here">Click Here</string>

    <string name="create_plant_heading">Create Plant</string>

    <string name="last_watered_prompt">It was last watered…</string>

    <string name="enter_date">Enter Date</string>

    <string-array name="period_array">
        <item>Day(s)</item>
        <item>Week(s)</item>
        <item>Month(s)</item>
    </string-array>

</resources>