<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePlantActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondaryLightColor"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/createPlantToolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/secondaryLightColor"
            android:gravity="start"
            android:layoutDirection="rtl"
            app:menu="@menu/single_plant_view_app_bar" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <!-- Layout containing image views & inputs -->
        <LinearLayout
            android:id="@+id/llCameraField"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:paddingTop="16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_a_photo_24"/>

            <TextView
                android:text="@string/plant_image_input"
                android:textColor="@color/primaryDarkColor"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!-- Layout containing text views & inputs -->
        <LinearLayout
            android:id="@+id/llFields"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Plant Name input -->
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/plant_name_input_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:paddingLeft="-10dp"
                app:boxBackgroundColor="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPlantName"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Watering Period title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:textSize="14sp"
                android:text="@string/watering_period_input"/>

            <!-- Watering Period input -->
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etPeriod"
                    android:inputType="number"
                    android:text="1"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/spinPeriod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </LinearLayout>

            <!-- Last Watered Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:textSize="14sp"
                android:text="@string/last_watered_prompt"/>

            <!-- Last Watered Input -->
            <EditText
                android:id="@+id/etLastWateredDate"
                android:focusable="false"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_date"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>